Getting the lesson structure together

--- a/_toc.yml
+++ b/_toc.yml
@@ -4,9 +4,9 @@
 format: jb-book
 root: 0.intro
 chapters:
-- file: 1.correlation-problem
-- file: 2.paired-t
-- file: 3.rm-anova
-- file: 4.gls
-- file: 5.intro-mixed
+- file: 1.lme-framework
+- file: 2.lme-advantages
+- file: 3.hierarchical-models
+- file: 4.estimation-inference
+- file: 5.lme-R
 - file: summary
