--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: "Linear Models with Correlated Errors"
+title: "An Introduction to Mixed-effects Models"
 author: Dr Martyn McFarquhar
 copyright: "2026"
 logo: logo.png
@@ -18,8 +18,8 @@ latex:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/PCHN63112-Mixed-Models/correlated-errors  # Online location of your book
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/PCHN63112-Mixed-Models/mixed-effects-intro  # Online location of your book
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
