--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,7 @@
 format: jb-book
 root: 0.intro
 chapters:
+- file: 1.gls
 - file: 1.lme-framework
 - file: 2.lme-advantages
 - file: 3.hierarchical-models
