--- a/_toc.yml
+++ b/_toc.yml
@@ -4,9 +4,9 @@
 format: jb-book
 root: 0.intro
 chapters:
+- file: 1.estimating-sigma
 - file: 1.gls
 - file: 2.lme-framework
 - file: 3.lme-advantages
-- file: 4.estimation-inference
 - file: 5.lme-R
 - file: summary
