--- a/_toc.yml
+++ b/_toc.yml
@@ -4,9 +4,9 @@
 format: jb-book
 root: 0.intro
 chapters:
-- file: 1.estimating-sigma
-- file: 1.gls
-- file: 2.lme-framework
-- file: 3.lme-advantages
-- file: 5.lme-R
+- file: 1.intro-mixed
+- file: 2.multilevel-framework
+- file: 3.multilevel-to-mixed
+- file: 4.implied-marginal-model
+- file: 5.advantages
 - file: summary
